# MergeSort

./: CMakeLists.txt  build.sh  run.sh  testall.sh
main/: CMakeLists.txt  main.cpp
mergeSort/: CMakeLists.txt
mergeSort/inc/: mergeSort.h
test/: CMakeLists.txt
test/src/: merge_sort_test.cc
